--- a/style.css
+++ b/style.css
@@ -71,3 +71,16 @@ button:disabled {
   width: 70%;
   border-radius: 30px;
 }
+
+#resultSmallDiv{
+  display: flex;
+  width: 100%;
+  margin: 5px;
+}
+.newDiv {
+  margin: 10px;
+  padding: 10px 20px;
+  border: 1px solid #ddd;
+  display: inline-block;
+  font-size: large;
+}
